# RuFuS

./: .clang-format  CMakeLists.txt  Config.cmake.in  LICENSE  README.md
cmake/: RuFuS.cmake  embed_ir.cmake  ir_to_header.py
examples/: CMakeLists.txt  hot_loop.cpp  main.cpp
include/: rufus.hpp
src/: hot_loop.cpp  rufus.cpp
tests/: CMakeLists.txt  GTestMain.cpp  accessor.hpp  accessor_test_utils.cpp  accessor_tests.cpp  constexpr_test_utils.cpp  constexpr_tests.cpp  hot_loop_tests.cpp
